- [x] Align experience headlines and fix z-index issue - [x] Improve building headline readability

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -23,7 +23,7 @@ Title Section
   font-size: 1.1vw;
   padding:1vw;
   background-color: rgb(255, 255, 129);
-  height: 7vw;
+  height: 11vw;
   width:28vw;
   position: fixed;
   left: 9%;
@@ -34,6 +34,20 @@ Title Section
   box-shadow: #4b575b 0px 0px 10px;
 }
 
+#under_construction a{
+font-size:.8em;
+padding:1vw 0vw .5vw 0vw;
+display:block;
+width:60%;
+left:50%;
+margin-left:auto;
+margin-right:auto;
+text-decoration: none;
+}
+
+#under_construction p{
+  font-size:.7em;
+  }
 
 /*
 ************************************************************************************************
@@ -46,6 +60,7 @@ Map Section
   top: 35%;
   transform: translate(-50%, 50%);
   bottom:50%;
+  pointer-events: none;
   }
 
 .container {
@@ -54,6 +69,7 @@ Map Section
   width: calc(4.5vw*24);
   left:46%;
   position:relative;
+  pointer-events: none;
 }
 
 /*
@@ -74,7 +90,7 @@ Buildings Section
 
   .building:hover {
     pointer-events: all;
-    top: -10px;
+    top: -.5vw;
   }
 
   .container h3 {
@@ -82,39 +98,60 @@ Buildings Section
     position: absolute;
     width:0%;
     color: rgba(0,0,0,0);
-    transform: skew(63deg,-26.6deg);
+    transform: skew(62deg,-31.6deg);
     text-shadow: 0 0 3px rgba(0, 0, 128, 0.25);
     z-index: 3;
+    /*transition: top .5s ease-in-out,
+                left .5s ease-in-out,
+                width .5s ease-in-out;*/
   }
    
   .container h3:after {
     content: attr(data-title);
     position: absolute;
     opacity:.99;
-    width:50% !important;
-    color: rgba(255,255,255,1);
+    width:20vw;
+    color: rgb(254, 235, 201);
     transform: skew(-63deg) scale(1,.5);
     text-shadow:
-    -1px -1px 1px #aaa,
-    -2px -2px 1px #999,
-    -3px -3px 1px #888,
-    -4px -4px 1px #777,
-    -5px -5px 1px #666,
-    -6px -6px 1px #555,
-    -7px -7px 5px rgba(0, 0, 128, 0.75);
-    z-index: 3;
+     1px 1px 1px rgb(79, 50, 18),
+    -1px -1px 1px rgb(79, 50, 18),
+    -2px -2px 1px rgb(79, 50, 18),
+    -3px -3px 1px rgb(134, 86, 30),
+    -4px -4px  rgb(144, 102, 55),
+    -5px -5px  rgb(186, 131, 68),
+    -6px -6px 1px rgb(68, 57, 46);
+    -webkit-text-stroke: .03vw rgb(255, 255, 255);
     transform-style: preserve-3d;
-  }
-
-
-  .container:hover h3 {
-    display: block;
-    top: 30vw;
-    left: 22vw;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
     z-index: 3;
-    width:50% !important;
-    pointer-events: none;
+    
+   
+}
+
+.container:hover h3 {
+   display:block;
+   pointer-events:none;
+   animation-name:fly-in;
+   animation-duration:.2s;
+   position:relative;
+   top:500px;
+   animation-fill-mode: forwards;
+   animation-timing-function: ease-out;
+}
+
+@keyframes fly-in {
+   from {
+    top: calc(100% + 20vw);
+    opacity: 0;
   }
+  to {
+      top:initial;
+      opacity: 1;
+   }
+}
 
   .building svg{
     height: 15.5vw;
@@ -131,9 +168,9 @@ Buildings Section
     width: 18vw;
   }
 
-  h3#hospital{
-    top: 15vw;
-    left: 3vw;
+  h3#hospital::after{
+    top: 17vw;
+    left: 0vw;
   }
 
 
@@ -145,11 +182,12 @@ Buildings Section
   height: 18vw;
   width: 18vw;
 }
-/*
-h3#foundation{
-  
+
+h3#foundation::after{
+    top: 28vw;
+    left: 0vw;
 }
-*/
+
 
 /**//**//**//**/
 /*   PARK     */
@@ -160,9 +198,9 @@ h3#foundation{
     width: 25vw;
   }
 
-  h3#park{
-    top: 50vw;
-    left: 43vw;
+  h3#park::after{
+    top: 39vw;
+    left: 0vw;
   }
 
 /**//**//**//**/
@@ -172,18 +210,18 @@ h3#foundation{
   width:210%;
 }
 
-h3#city{
-  top: 65vw;
-  left: 27vw;
+h3#city::after{
+  top: 43vw;
+  left: -20vw;
 }
 
 /**//**//**//**/
 /* HOTEL */
 /**//**//**//**/
 
-h3#hotel{
-  top: 70vw;
-  left: 10vw;
+h3#hotel::after{
+  top: 43vw;
+  left: -40vw;
 }
 
 /**//**//**//**/
@@ -194,9 +232,9 @@ h3#hotel{
     width: 34vw;
   }
 
-  h3#farm{
-    top: 57vw;
-    left: -6vw;
+  h3#farm::after{
+    top: 26vw;
+    left: -35vw;
   }
 
 
@@ -353,6 +391,10 @@ Footer Section
     background-color: #B3A682;
     width:50%;
     text-align:left;
+}
+
+.info p{
+  margin-top:2em;
 }
 
 .contact {
